# Django-Concept---Basic

./: .gitignore  django - theory.docx  pyproject.toml
finalproject/: db.sqlite3
finalproject/finalproject/: settings.py  urls.py
finalproject/templates/: layout.html
finalproject/templates/registration/: logged_out.html  login.html  register.html
finalproject/tweet/: admin.py  forms.py  models.py  urls.py  views.py
finalproject/tweet/migrations/: 0001_initial.py
finalproject/tweet/templates/: index.html  tweet_confirm_delete.html  tweet_form.html  tweet_list.html
project01/: db.sqlite3
project01/firstservice/: admin.py  apps.py  models.py  urls.py  views.py
project01/firstservice/migrations/: 0001_initial.py  0002_chaicertificate_chaireview_store.py
project01/firstservice/templates/firstservice/: anyname.html  chaiDetail.html  order.html
project01/project01/: settings.py  urls.py  views.py
project01/static/: style.css
project01/templates/: layout.html
project01/templates/website/: index.html
