[project]
name = "django-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.6.0",
    "dj-database-url>=2.3.0",
    "django>=5.2.1",
    "django-tailwind[reload]>=4.0.1",
    "pillow>=11.2.1",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
]
